--- a/index.html
+++ b/index.html
@@ -2948,7 +2948,7 @@
                   { "value": "90", "label": "90 inch" }
                 ]
               },
-              "endpoint": "https:\/\/www.oneforall.com\/product_selectors\/wallmounts",
+              "endpoint": "https:\/\/#",
               "showSummary": false,
               "disclaimer": "https:\/\/www.oneforall.com\/disclaimer",
               "active": false
@@ -2961,10 +2961,6 @@
         }
       }
     </script>
-
-    <!--[if lte IE 8]>
-      <script src="/sites/default/files/js/js_VtafjXmRvoUgAzqzYTA3Wrjkx9wcWhjP0G4ZnnqRamA.js"></script>
-    <![endif]-->
     <script src="https://www.oneforall.com/sites/default/files/js/js_BKcMdIbOMdbTdLn9dkUq3KCJfIKKo2SvKoQ1AnB8D-g.js"></script>
     <script src="https://www.oneforall.com/core/assets/vendor/modernizr/modernizr.min.js?v=3.3.1"></script>
     <script src="https://www.oneforall.com/sites/default/files/js/js_I4NNwaIu5Jqu1jrLC4LtzD5oiVLJcENQAA6RwlYAAas.js"></script>
@@ -4746,7 +4742,7 @@
                         <a
                           href="/"
                           title="Find the right remote"
-                          data-drupal-link-system-path="product_selectors/remotes"
+                          data-drupal-link-system-path="/"
                           >Find the right remote</a
                         >
                       </li>
@@ -4754,7 +4750,7 @@
                         <a
                           href="/"
                           title="Find the right antenna"
-                          data-drupal-link-system-path="product_selectors/antennas"
+                          data-drupal-link-system-path="/"
                           >Find the right antenna</a
                         >
                       </li>
@@ -4762,7 +4758,7 @@
                         <a
                           href="/"
                           title="Find the right TV wall mount"
-                          data-drupal-link-system-path="product_selectors/wallmounts"
+                          data-drupal-link-system-path="/"
                           >Find the right TV wall mount</a
                         >
                       </li>
