--- a/index.html
+++ b/index.html
@@ -4846,7 +4846,7 @@
                 <div class="footer--logo">
                   <img
                     class="logo--footer"
-                    src="/logo.jpeg"
+                    src="logo.jpeg"
                     alt="Home"
                     typeof="foaf:Image"
                   />
